--- a/MERN_NextJS_Projects/Project6_MessageApp/mstry-message/package.json
+++ b/MERN_NextJS_Projects/Project6_MessageApp/mstry-message/package.json
@@ -10,14 +10,20 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
+    "@radix-ui/react-alert-dialog": "^1.1.2",
     "@radix-ui/react-label": "^2.1.0",
+    "@radix-ui/react-separator": "^1.1.0",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-switch": "^1.1.1",
     "@radix-ui/react-toast": "^1.2.2",
     "@react-email/components": "^0.0.25",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "embla-carousel": "^8.3.1",
+    "embla-carousel-autoplay": "^8.3.1",
+    "embla-carousel-react": "^8.3.1",
     "lucide-react": "^0.454.0",
     "mongoose": "^8.7.3",
     "next": "15.0.2",
